--- a/Contacts.html
+++ b/Contacts.html
@@ -88,7 +88,8 @@
             <h1>Contact Us Today</h1>
             <p>Sign up now for a free consultation about any of our offered services</p>
             <div class="form__wrap">
-                <form action="https://formsubmit.co/dynamicfreelance.co@gmail.com" method="POST">
+                 <form action="https://api.web3forms.com/submit" method="POST">
+                   <input type="hidden" name="access_key" value="a60ec46d-6e22-4bcb-bcef-13d8171a61df">
                     <input type="text" name="name" placeholder="Name" required>
                     <input type="phone" name="phone" placeholder="Enter your phone number" required>
                     <input type="email" name="email" placeholder="Enter your email" required>
