--- a/index.html
+++ b/index.html
@@ -312,8 +312,7 @@
                       <option value="gold marketing">Gold Marketing</option>
                       <option value="premium marketing">Premium Marketing</option>
                     </select>
-                    <button class="button" type="submit">Send</button>
-                    <input type="hidden" name="_next" value="https://dynamic-technologies.ca/thanks.html">
+                    <button class="button" type="submit" href="https://dynamic-technologies.ca/thanks.html">Send</button>
                </form>
             </div>
         </div>
