--- a/Contacts.html
+++ b/Contacts.html
@@ -104,7 +104,7 @@
                       <option value="gold marketing">Gold Marketing</option>
                       <option value="premium marketing">Premium Marketing</option>
                     </select>
-                    <button class="button" type="submit" href="https://dynamic-technologies.ca/thanks.html">Send</button>
+                    <button class="button" type="submit">Send</button>
                </form>
             </div>
         </div>
