--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
                       <option value="premium marketing">Premium Marketing</option>
                     </select>
                     <button class="button" type="submit">Send</button>
+                   <input type="hidden" name="redirect value="https://dynamic-technologies.ca/thanks.html">               
                </form>
             </div>
         </div>
