--- a/Contacts.html
+++ b/Contacts.html
@@ -90,6 +90,7 @@
             <div class="form__wrap">
                  <form action="https://api.web3forms.com/submit" method="POST">
                    <input type="hidden" name="access_key" value="a60ec46d-6e22-4bcb-bcef-13d8171a61df">
+                    <input type="hidden" name="redirect" value="https://dynamic-technologies.ca/thanks.html"> 
                     <input type="text" name="name" placeholder="Name" required>
                     <input type="phone" name="phone" placeholder="Enter your phone number" required>
                     <input type="email" name="email" placeholder="Enter your email" required>
@@ -104,8 +105,7 @@
                       <option value="gold marketing">Gold Marketing</option>
                       <option value="premium marketing">Premium Marketing</option>
                     </select>
-                    <button class="button" type="submit">Send</button>
-                     <input type="hidden" name="redirect value="https://dynamic-technologies.ca/thanks.html">         
+                    <button class="button" type="submit">Send</button>        
                </form>
             </div>
         </div>
