--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <div id="Hero" class="hero">
             <div class="hero__content">
                 <h1>Dynamic Technologies</h1>
-                <p>Book a consultation today</p>
-                <a href="/Contacts.html" class="button">Book Now</a>
+                <p>Want to grow your business?</p>
+                <a href="/Contacts.html" class="button">Contact Us</a>
                 <div class="mouse-scroll"><h2>swipe</h2></div>
             </div>
         </div>
@@ -91,7 +91,7 @@
             <div class="hero__content">
                 <h1>Products & Developments</h1>
                 <p>Check out our tech demo's here</p>
-                <a href="/Products&Games.html" class="button">View Tech</a>
+                <a href="/Products&Games.html" class="button">View Now</a>
                 <div class="mouse-scroll"><h2>swipe</h2></div>
             </div>
         </div>
