--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div id="Hero" class="hero">
             <div class="hero__content">
                 <h1>Dynamic Technologies</h1>
-                <p>Want to grow your business?</p>
+                <p>Scale Your Business</p>
                 <a href="/Contacts.html" class="button">Contact Us</a>
                 <div class="mouse-scroll"><h2>swipe</h2></div>
             </div>
@@ -118,12 +118,12 @@
         <div class="services__Container">
             <div>
                 <div class="services__features">
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Website Development</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Website Hosting - $25.00/m</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Social Media Marketing</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> SEO Development</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Logo Design</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Game Development</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Website Development</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Website Hosting - $25.00/m</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Social Media Marketing</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> SEO Development</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Logo Design</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Game Development</p>
                     <a> </a>
                     <a href="/Services.html" class="button">Learn More</a>
                 </div>
@@ -145,7 +145,6 @@
                     after the first year. Dynamic-Technologies is here to help; not only do they expand online presence through websites and social media,
                     but they also offer insight and knowledge on the best ways to scale your business in the modern age.<b>So do whats right for your business,
                     contact us today Dynamic-Technologies.ca</b></h1>
-              <img src="./images/search.png" alt="SEO Development" class="seo__img" />
         </div>
      </div>
         <div class="team__text reveal">
