--- a/Services.html
+++ b/Services.html
@@ -91,12 +91,12 @@
         <div class="services__Container">
             <div>
                 <div class="services__features">
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Website Development</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Website Hosting - $25.00/m</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Social Media Marketing</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> SEO Development</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Logo Design</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Game Development</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Website Development</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Website Hosting - $25.00/m</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Social Media Marketing</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> SEO Development</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Logo Design</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Game Development</p>
                 </div>
             </div>
         </div>
@@ -123,7 +123,6 @@
                     Regular analytics reporting and progress tracking allow for agile strategy adjustments, empowering businesses to
                     achieve sustainable growth in search engine rankings. Dynamic-Technologies commitment to staying current with industry
                     trends and employing ethical SEO practices underscores their reliability in delivering measurable results for enhancing online presence.</h1>
-              <img src="./images/search.png" alt="SEO Development" class="seo__img" />
         </div>
      </div>
      <div id="Hosting" class="services">
@@ -134,12 +133,12 @@
         <div class="services__Container">
             <div>
                 <div class="services__features">
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Unlimited Site Updates</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> SSL Certificate</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Domain Included</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Website Management</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> Low Pricing</p>
-                    <p class="services__feature"><i class="fas fa-check-circle"></i> First Month Free</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Unlimited Site Updates</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> SSL Certificate</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Domain Included</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Website Management</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> Low Pricing</p>
+                    <p class="services__feature reveal"><i class="fas fa-check-circle"></i> First Month Free</p>
                 </div>
             </div>
         </div>
@@ -212,7 +211,7 @@
         <div class="footer">
             <div class="footer__wrapper">
                 <div class="footer__desc">
-                    <h1>DYNAMIC TECHNOLOGIES</h1>
+                    <h1>DYNAMIC-TECHNOLOGIES</h1>
                     <p>Located in Toronto Ontario Canada.</p>
                     <p id="phone">289-383-4552</p>
                     <p id="email">dynamicfreelance.co@gmail.com</p>
