--- a/Products_Games.html
+++ b/Products_Games.html
@@ -82,7 +82,8 @@
             $('.pointer').css({left:e.pageX, top:e.pageY});
         })
     </script>
-    <!--Services Section-->
+    
+    <!--Showcase Section-->
     <div class="showcase">
         <div class="team__text">
                 <p class="topline">Desktop Games</p>
@@ -101,7 +102,7 @@
         <div class="footer">
             <div class="footer__wrapper">
                 <div class="footer__desc">
-                    <h1>DYNAMIC TECHNOLOGIES</h1>
+                    <h1>DYNAMIC-TECHNOLOGIES</h1>
                     <p>Located in Toronto Ontario Canada.</p>
                     <p id="phone">289-383-4552</p>
                     <p id="email">dynamicfreelance.co@gmail.com</p>
