--- a/index.html
+++ b/index.html
@@ -138,12 +138,14 @@
         <div class="services__Container">
         </div>
          <div class="seo__info">
-                <h1>Not only does Dynamic-Technologies offer high end website development along with many amazing complimentary services such as
-                    website hosting, social media marketing and SEO development, they are also here to help you scale your business.
-                    Many small business owners struggle to scale within the first year of running their business, wether it be a lack of <b>clients</b>,
-                    <b>revenue</b>, or more commonly the lack of an <b>online presence</b>, these issues are the main reasons many small business close down
-                    after the first year. Dynamic-Technologies is here to help; not only do they expand online presence through websites and social media,
-                    but they also offer insight and knowledge on the best ways to scale your business in the modern age.<b>So do whats right for your business,
+                <h1>Not only does Dynamic-Technologies offer high end website development along with many amazing complimentary services
+                    which can be seen above, they are also here to help you scale your business. Many business owners strugle with things such as
+                    <b> a lack of clients</b>,
+                    <b>revenue</b>, 
+                    or more commonly the lack of an <b>online presence</b>.
+                    These issues are the main reasons many small business close down
+                    after the first year. Dynamic-Technologies is here to help. We offer expert solutions to scale your business, and grow your online presence
+                    <b>So do whats right for your business,
                     contact us today Dynamic-Technologies.ca</b></h1>
         </div>
      </div>
@@ -223,43 +225,6 @@
         <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
     </svg>
 </div>
-    </div>
-    <!-- About Us Section-->
-    <div id="about us" class="team">
-        <div class="team__wrapper reveal">
-            <div class="team__text">
-                <p class="topline">About Us</p>
-                <h1>Dynamic Technologies</h1>
-                  <p class="team__desc">  Founded on April 6th 2023 by Adrian Ubani & Christian Vala,
-                    Dynamic Technologies is an entrepreneurs dream. We remove the hastle of website development for businesses of all scales, design eye catching logos, and
-                    ensure that your clients have a smooth elegant online experience when working with your business. The Dynamic Technologies staff consists of highly trained
-                    and experienced professionals, in order to produce the highest quality digital branding our customers and yours, could ever imagine. </p>
-                <a href="/Aboutus.html" class="button">More Info</a>
-            </div>
-             <h1 class="services__heading">Our Co-Founders</h1>
-            <div class="team__card">
-                <a>Adrian Ubani</a>
-                <img src="./images/Headshot A.png" alt="adrian" class="team__img"/>
-            </div>
-            <div class="team__card">
-                <h1>When I first met my co-founder and business partner Christian, I was a dreamer filled with creative ideas. Christian and I share many similar hobbies, together we were
-                    able to bring many ideas to life. We designed and produced our first game after I had brought up the concept, and he created the code. We realized how benifitial our 
-                    skillsets were in order to bring each others ideas to life. I specialize in arts, design, writing & photography; so in turn we created Dynamic Technologies, a company 
-                    that consists of a combination of our experties, with the added benefits of helping others succeed and advancing the worlds technologies</h1>
-            </div>
-            <div class="team__card">
-                <p>Christian Vala</p>
-                <img src="./images/Headshot C.png" alt="cris" class="team__img"/>
-            </div>
-            <div class="team__card">
-                <h1>I am the co-founder and co-owner of Dynamic Technologies. 
-                    I specialize in computer science, programming, website development & entrepenurial studies.
-                    When Adrian and I first created Dynamic Technologies we set out with a goal of combining our individual skillsets
-                    in order to help advance the worlds technology. We both agreed that the best way to do that is by helping online
-                    businesses thrive. Our goal will always be to provide our costumers with the most elegant online experience we can provide.
-                </h1>
-            </div>
-        </div>
     </div>
       <!--Reviews section-->
     <div class="team__text reveal">
