--- a/Services.html
+++ b/Services.html
@@ -117,12 +117,10 @@
         <div class="services__Container">
         </div>
          <div class="seo__info">
-                <h1>Dynamic-Technologies offers robust SEO services that boost online visibility through strategic keyword research,
-                    effective on-page optimization, and content strategies aligned with current search engine algorithms. They prioritize
-                    technical SEO factors like site speed and mobile responsiveness, ensuring peak performance across devices. 
-                    Regular analytics reporting and progress tracking allow for agile strategy adjustments, empowering businesses to
-                    achieve sustainable growth in search engine rankings. Dynamic-Technologies commitment to staying current with industry
-                    trends and employing ethical SEO practices underscores their reliability in delivering measurable results for enhancing online presence.</h1>
+                <h1>Dynamic-Technologies offers expert SEO services that boost online visibility through strategic keyword research,
+                    on-page optimization, and beautifully designed websites. We prioritize technical SEO factors like site speed and mobile 
+                    responsiveness, to increase customer interaction times. Dynamic-Technologies is committed to scaling your business,
+                    and ensuring that your clients see the best versions of you.</h1>
         </div>
      </div>
      <div id="Hosting" class="services">
