--- a/Services.html
+++ b/Services.html
@@ -83,6 +83,25 @@
         })
     </script>
     <!--Services Section-->
+    <div id="Why" class="services reveal">
+            <div class="team__text">
+                <p class="topline">What We Do</p>
+                <h1>Why Choose Dynamic-Technologies?</h1>
+            </div>
+        <div class="services__Container">
+        </div>
+         <div class="seo__info">
+                <h1>Not only does Dynamic-Technologies offer high end website development along with many amazing complimentary services
+                    which can be seen below, we're also here to help you scale your business. Many business owners strugle with things such as
+                    <b> a lack of clients</b>,
+                    <b>revenue</b>, 
+                    or more commonly the lack of an <b>online presence</b>.
+                    These issues are the main reasons many small business close down
+                    after the first year. Dynamic-Technologies is here to help. We offer expert solutions to scale your business, and grow your online presence
+                    <b>So do whats right for your business,
+                    contact us today Dynamic-Technologies.ca</b></h1>
+        </div>
+     </div>
     <div id="#" class="services">
         <div class="team__text">
         <p class="topline">Features</p>
