--- a/Services.html
+++ b/Services.html
@@ -83,7 +83,7 @@
         })
     </script>
     <!--Services Section-->
-    <div id="Why" class="services reveal">
+    <div id="Why" class="services">
             <div class="team__text">
                 <p class="topline">What We Do</p>
                 <h1>Why Choose Dynamic-Technologies?</h1>
