--- a/Services.html
+++ b/Services.html
@@ -92,11 +92,11 @@
         </div>
          <div class="seo__info">
                 <h1>Not only does Dynamic-Technologies offer high end website development along with many amazing complimentary services
-                    which can be seen below, we're also here to help you scale your business. Many business owners strugle with things such as
-                    <b> a lack of clients</b>,
-                    <b>revenue</b>, 
-                    or more commonly the lack of an <b>online presence</b>.
-                    These issues are the main reasons many small business close down
+                    which can be seen below, we're also here to help you scale your business. Many business owners strugle with things such as</h1></div>
+<div class="seo__info"> <h1><b> a lack of clients</b>, </h1></div>
+<div class="seo__info"> <h1><b>revenue</b>, </h1></div>
+<div class="seo__info"><h1>or more commonly the lack of an <b>online presence</b>.</h1></div>
+<div class="seo__info"><h1> These issues are the main reasons many small business close down
                     after the first year. Dynamic-Technologies is here to help. We offer expert solutions to scale your business, and grow your online presence
                     <b>So do whats right for your business,
                     contact us today Dynamic-Technologies.ca</b></h1>
