--- a/Services.html
+++ b/Services.html
@@ -177,8 +177,8 @@
                 <p> - $100/m</p>
                 <p> - Create your own advertisment alongside our team & submit it to us for publishing</p>
                 <p> - Monthly social media ads on multiple platforms</p>
-                <p> - Gaurenteed increase in high quality leads</p>
-                <p> - Guarenteed increase in click through rates</p>
+                <p> - Guaranteed increase in high quality leads</p>
+                <p> - Guaranteed increase in click through rates</p>
             </div>
             <a href="/Contacts.html" class="button">Purchase</a>
         </div>
@@ -190,8 +190,8 @@
                 <p> - $300/m</p>
                 <p> - We create and publish a custom advertisment</p>
                 <p> - Monthly social media ads on multiple platforms</p>
-                <p> - Gaurenteed increase in high quality leads</p>
-                <p> - Guarenteed increase in click through rates and additional SEO services</p>
+                <p> - Guaranteed increase in high quality leads</p>
+                <p> - Guaranteed increase in click through rates and additional SEO services</p>
             </div>
             <a href="/Contacts.html" class="button">Purchase</a>
         </div>
@@ -203,7 +203,7 @@
                 <p> - Set your own budget</p>
                 <p> - We create and publish a custom advertisment</p>
                 <p> - Monthly social media ads with a guarenteed increase in high quality leads</p>
-                <p> - Guarenteed increase in click through rates and additional SEO services</p>
+                <p> - Guaranteed increase in click through rates and additional SEO services</p>
                 <p> - Our Best Offer!</p>
             </div>
             <a href="/Contacts.html" class="button">Purchase</a>
@@ -216,8 +216,8 @@
                 <p> - Set your own budget</p>
                 <p> - We create and publish a custom advertisment</p>
                 <p> - Monthly social media ads on all social media platforms</p>
-                <p> - Gaurenteed increase in high quality leads</p>
-                <p> - Guarenteed increase in click through rates and additional SEO services</p>
+                <p> - Guaranteed increase in high quality leads</p>
+                <p> - Guaranteed increase in click through rates and additional SEO services</p>
             </div>
             <a href="/Contacts.html" class="button">Purchase</a>
         </div>
