--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                 <p> - $100/m</p>
                 <p> - Create your own advertisment alongside our team & submit it to us for publishing</p>
                 <p> - Monthly social media ads on multiple platforms</p>
-                <p> - Gaurenteed increase in high quality leads</p>
-                <p> - Guarenteed increase in click through rates</p>
+                <p> - Guaranteed increase in high quality leads</p>
+                <p> - Guaranteed increase in click through rates</p>
             </div>
             <a href="/Contacts.html" class="button">Purchase</a>
         </div>
@@ -169,8 +169,8 @@
                 <p> - $300/m</p>
                 <p> - We create and publish a custom advertisment</p>
                 <p> - Monthly social media ads on multiple platforms</p>
-                <p> - Gaurenteed increase in high quality leads</p>
-                <p> - Guarenteed increase in click through rates and additional SEO services</p>
+                <p> - Guaranteed increase in high quality leads</p>
+                <p> - Guaranteed increase in click through rates and additional SEO services</p>
             </div>
             <a href="/Contacts.html" class="button">Purchase</a>
         </div>
@@ -182,7 +182,7 @@
                 <p> - Set your own budget</p>
                 <p> - We create and publish a custom advertisment</p>
                 <p> - Monthly social media ads with a guarenteed increase in high quality leads</p>
-                <p> - Guarenteed increase in click through rates and additional SEO services</p>
+                <p> - Guaranteed increase in click through rates and additional SEO services</p>
                 <p> - Our Best Offer!</p>
             </div>
             <a href="/Contacts.html" class="button">Purchase</a>
@@ -195,8 +195,8 @@
                 <p> - Set your own budget</p>
                 <p> - We create and publish a custom advertisment</p>
                 <p> - Monthly social media ads on all social media platforms</p>
-                <p> - Gaurenteed increase in high quality leads</p>
-                <p> - Guarenteed increase in click through rates and additional SEO services</p>
+                <p> - Guaranteed increase in high quality leads</p>
+                <p> - Guaranteed increase in click through rates and additional SEO services</p>
             </div>
             <a href="/Contacts.html" class="button">Purchase</a>
         </div>
