--- a/index.html
+++ b/index.html
@@ -213,28 +213,11 @@
           <h1>Here's What Our Clients Had To Say</h1>
     </div>
     <div class="reviews">
-     <div class="container reveal">
-        <div class="wrapper">
-            <div class="wrapper-holder">
-                 <div id="slider-img-1"></div>
-                 <div id="slider-img-2"></div>
-                 <div id="slider-img-3"></div>
-                 <div id="slider-img-4"></div>
-            </div>
-        </div>
-        <div class="button-holder">
-            <a href="#slider-img-1" class="review-button"></a>
-            <a href="#slider-img-2" class="review-button"></a>
-            <a href="#slider-img-3" class="review-button"></a>
-            <a href="#slider-img-4" class="review-button"></a>
-        </div>
-    </div>
-    <div>
+     <div class='sk-ww-google-reviews' data-embed-id='25497007'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' defer></script>
         <div class="buttonCenter">
             <a href="https://g.page/r/CdtG4CS06SSDEAI/review" class="button">Leave a Review</a>
         </div>
     </div>
-</div>
     <!--Contacts Section-->
     <div class="email">
         <div class="email__content">
