--- a/Aboutus.html
+++ b/Aboutus.html
@@ -123,29 +123,15 @@
           <p class="topline">reviews</p>
           <h1>Our Client Feedback</h1>
     </div>
-    <div class="reviews">
-     <div class="container">
-        <div class="wrapper">
-            <div class="wrapper-holder">
-                 <div id="slider-img-1"></div>
-                 <div id="slider-img-2"></div>
-                 <div id="slider-img-3"></div>
-                 <div id="slider-img-4"></div>
-            </div>
-        </div>
-        <div class="button-holder">
-            <a href="#slider-img-1" class="review-button"></a>
-            <a href="#slider-img-2" class="review-button"></a>
-            <a href="#slider-img-3" class="review-button"></a>
-            <a href="#slider-img-4" class="review-button"></a>
-        </div>
+     <!--Reviews section-->
+    <div class="team__text reveal">
+          <p class="topline">sounds too good to be true?</p>
+          <h1>Here's What Our Clients Had To Say</h1>
     </div>
-    <div>
+     <div class='sk-ww-google-reviews' data-embed-id='25497007'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' defer></script>
         <div class="buttonCenter">
             <a href="https://g.page/r/CdtG4CS06SSDEAI/review" class="button">Leave a Review</a>
         </div>
-    </div>
-    </div>
     <!--join section-->
     <div id="Jobs" class="Join">
      <div class="team">
