--- a/Aboutus.html
+++ b/Aboutus.html
@@ -128,7 +128,8 @@
           <p class="topline">sounds too good to be true?</p>
           <h1>Here's What Our Clients Had To Say</h1>
     </div>
-     <div class='sk-ww-google-reviews' data-embed-id='25497007'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' defer></script>
+        <script src="https://static.elfsight.com/platform/platform.js" async></script>
+    <div class="elfsight-app-f019c3bc-c2e6-47c2-b68a-85ed0b35560b" data-elfsight-app-lazy></div>
         <div class="buttonCenter">
             <a href="https://g.page/r/CdtG4CS06SSDEAI/review" class="button">Leave a Review</a>
         </div>
