--- a/index.html
+++ b/index.html
@@ -212,8 +212,7 @@
           <p class="topline">sounds too good to be true?</p>
           <h1>Here's What Our Clients Had To Say</h1>
     </div>
-    <script src="https://static.elfsight.com/platform/platform.js" async></script>
-    <div class="elfsight-app-f019c3bc-c2e6-47c2-b68a-85ed0b35560b" data-elfsight-app-lazy></div>
+    <div class="tagembed-widget" style="width:100%;height:100%" data-widget-id="2142021" data-tags="false"  view-url="https://widget.tagembed.com/2142021"></div><script src="https://widget.tagembed.com/embed.min.js" type="text/javascript"></script>
         <div class="buttonCenter">
             <a href="https://g.page/r/CdtG4CS06SSDEAI/review" class="button">Leave a Review</a>
         </div>
