--- a/Aboutus.html
+++ b/Aboutus.html
@@ -88,10 +88,11 @@
             <div class="team__text">
                 <p class="topline">About Us</p>
                 <h1>Dynamic-Technologies</h1>
-                <p class="team__desc">  Founded on April 6th 2023 by Adrian Ubani & Christian Vala,
-                    Dynamic-Technologies is an entrepreneurs dream. We remove the hastle of website development for businesses of all scales, design eye catching logos, and
-                    ensure that your clients have a smooth elegant online experience when working with your business. The Dynamic-Technologies staff consists of highly trained
-                    and experienced professionals, in order to produce the highest quality digital branding our customers and yours, could ever imagine. </p>
+                <p class="team__desc">  Founded on April 6th 2023 by Adrian Ubani & Christian Vala, Dynamic-Technologies is an entrepreneurs dream.
+                    We remove the hassle of website development for businesses of all scales by offering the best custom website development,
+                    designing eye catching logos, and ensuring that your clients have a smooth elegant online experience when working with your business.
+                    The Dynamic-Technologies staff consists of highly trained and experienced website developers as well as graphic designers,
+                    in order to produce the highest quality digital branding our customers and yours, could ever imagine.</p>
             </div>
              <h1 class="services__heading">Our Co-Founders</h1>
             <div class="team__card">
