--- a/Services.html
+++ b/Services.html
@@ -13,8 +13,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic-Technologies/Services</title>
-    <meta name="description" content="Dynamic website design, high end digital branding, high speed hosting... Contact us today: dynamic-technologies.ca/Contacts.html">
+    <title>Dynamic-Technologies</title>
+    <meta name="description" content="Dynamic-Technologies offers dynamic website design, high end digital branding and high speed hosting. Contact us today!">
     <link rel="Icon" href="./images/D-Tech Logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
