--- a/Aboutus.html
+++ b/Aboutus.html
@@ -13,8 +13,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic-Technologies/About Us</title>
-     <meta name="description" content="Learn more about our co-founders and our team of experienced professionals. Contact us today: dynamic-technologies.ca/Contacts.html">
+    <title>Dynamic-Technologies</title>
+     <meta name="description" content="Learn more about Dynamic-Technologies co-founders and the Dynamic-Technologies team of experienced professionals. Contact us today!">
     <link rel="Icon" href="./images/D-Tech Logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
