--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic-Technologies</title>
-    <meta name="description" content="Dynamic-Technologies provides high end website development, SEO development and social media marketing for all businesses. Contact us today to receive a quote >
+    <meta name="description" content="Dynamic-Technologies provides high end website development, SEO development and social media marketing for all businesses. Contact us today to receive a quote!">
     <link rel="Icon" href="./images/D-Tech Logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
