--- a/thanks.html
+++ b/thanks.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic-Technologies/Thanks</title>
+    <title>Dynamic-Technologies</title>
      <meta name="description" content="Thank you for choosing Dynamic-Technologies. Contact us today: dynamic-technologies.ca/Contacts.html">
     <link rel="Icon" href="./images/D-Tech Logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
