--- a/Aboutus.html
+++ b/Aboutus.html
@@ -82,7 +82,7 @@
             $('.pointer').css({left:e.pageX, top:e.pageY});
         })
     </script>
-          <!-- About Us Section-->
+    <!-- About Us Section-->
     <div class="team" id="Founders">
         <div class="team__wrapper">
             <div class="team__text">
@@ -119,17 +119,17 @@
             </div>
         </div>
     </div>
-         <!--Reviews section-->
+    <!--Reviews section-->
     <div id="Reviews" class="team__text">
           <p class="topline">reviews</p>
           <h1>Our Client Feedback</h1>
     </div>
-       <div class="tagembed-widget" style="width:100%;height:100%" data-widget-id="2142464" data-tags="false"  view-url="https://widget.tagembed.com/2142464"></div><script src="https://widget.tagembed.com/embed.min.js" type="text/javascript"></script>
+       <div class="tagembed-widget" style="width:100%; height:100%" data-widget-id="2142464" data-tags="false"  view-url="https://widget.tagembed.com/2142464"></div><script src="https://widget.tagembed.com/embed.min.js" type="text/javascript"></script>
         <div class="buttonCenter">
             <a href="https://g.page/r/CdTg4gIyYbBlEAE/review" class="button">Leave a Review</a>
         </div>
     <!--join section-->
-    <div id="Jobs" class="Join">
+   <!-- <div id="Jobs" class="Join">
      <div class="team">
         <div class="team__wrapper">
             <div class="team__text">
@@ -155,7 +155,7 @@
     <div class="review__container">
         <h1>Coming Soon...</h1>
     </div>
-    </div>
+    </div>-->
         <!--Footer section-->
         <div class="footer">
             <div class="footer__wrapper">
