--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </script>
     </div>
     <!--Services Section-->
-    <div id="services" class="services reveal">
+    <div id="services" class="services">
         <div class="team__text">
                 <p class="topline">Features</p>
                 <h1>What We Offer</h1>
@@ -130,7 +130,7 @@
             </div>
         </div>
     </div>
-        <div class="team__text reveal">
+        <div class="team__text">
         <div class="website__message">
         <img src="./images/DT.gif" alt="D-Tech" class="services__img" />
         <p class="topline">Website Development</p>
