--- a/Aboutus.html
+++ b/Aboutus.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="https://dynamic-technologies.ca/images/D-TechL.jpg">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "url": "https://dynamic-technologies.ca/Aboutus.html",
-      "logo": "https://dynamic-technologies.ca/images/D-TechL.jpg"
+      "url": "https://dynamic-technologies.ca",
+      "logo": "https://dynamic-technologies.ca/images/D-Tech Logo.png"
     }
     </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic-Technologies</title>
-     <meta name="description" content="Learn more about Dynamic-Technologies co-founders and the Dynamic-Technologies team of experienced professionals. Contact us today!">
-    <link rel="Icon" href="./images/D-Tech Logo.png" type="image/png">
+    <meta name="description" content="Dynamic-Technologies provides high end website development, SEO development and social media marketing for all businesses. Contact us today to receive a quote!">
+    <link rel="Icon" href="./images/D-tech Logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
     integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
