--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "url": "https://dynamic-technologies.ca",
-      "logo": "https://dynamic-technologies.ca/images/D-Tech Logo.png"
+      "logo": "https://dynamic-technologies.ca/images/DF3.png"
     }
     </script>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic-Technologies</title>
     <meta name="description" content="Dynamic-Technologies provides high end website development, SEO development and social media marketing for all businesses. Contact us today to receive a quote!">
-    <link rel="Icon" href="./images/D-tech Logo.png" type="image/png">
+    <link rel="Icon" href="./images/DF3.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
     integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
