--- a/Sales.html
+++ b/Sales.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic-Technologies</title>
+    <title>Dynamic-Technologies Sales And Special Offers</title>
     <meta name="description" content="Dynamic-Technologies provides high end website development, 
         SEO development and social media marketing for all businesses. Contact us today to receive a quote!">
     <link rel="stylesheet" href="styles.css">
-    <link rel="Icon" href="./images/DF3.png" type="image/png">
+    <link rel="icon" href="./images/DF3.png" type="image/png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
     integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
     crossorigin="anonymous">
