--- a/Sales.html
+++ b/Sales.html
@@ -4,24 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic-Technologies Sales And Special Offers</title>
-    <meta name="description" content="Dynamic-Technologies provides high end website development, 
-        SEO development and social media marketing for all businesses. Contact us today to receive a quote!">
-    <link rel="stylesheet" href="styles.css">
+    
+    <!-- Tags -->
+    <title>Dynamic-Technologies | Sales</title>
+    <meta name="description" content="Dynamic-Technologies provides high end website development, SEO development
+        and social media marketing for all businesses. Contact us today to receive a quote!">
     <link rel="icon" href="./images/DF3.png" type="image/png">
+    <base href="https://dynamic-technologies.ca/Sales.html">
+    <meta property="og:title" content="Dynamic-Technologies | Sales">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.dynamic-technologies.ca/Sales.html">
+    <meta property="og:site_name" content="Dynamic-Technologies">
+    <link rel="canonical" href="https://www.dynamic-technologies.ca/Sales.html">
+    
+     <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9LRK4DQDPT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-9LRK4DQDPT');
+    </script>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
     integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
     crossorigin="anonymous">
 </head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9LRK4DQDPT"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-9LRK4DQDPT');
-</script>
 <body>
     <style>
         ::-webkit-scrollbar{
